# alex-ed

./: .env.example  .gitignore  README.md
backend/: pyproject.toml  test_all_agents.py  test_api_response.py  test_enhanced.py  test_full.py  test_simple_agentcore.py  utils.py  watch_agents_agentcore.py
backend/agent_charter/: .bedrock_agentcore.yaml  Dockerfile  README.md  agent.py  test_full.py  test_simple.py
backend/agent_charter/src/: client.py  models.py
backend/agent_planner/: .bedrock_agentcore.yaml  Dockerfile  agent.py  check_db.py  test_arns.py  test_full.py  test_simple.py  tools.py  utils.py
backend/agent_planner/src/: client.py  models.py
backend/agent_reporter/: .bedrock_agentcore.yaml  Dockerfile  agent.py  requirements.txt  test_full.py  test_simple.py
backend/agent_reporter/src/: client.py
backend/agent_researcher/: agent.py  requirements.txt  src  test_full.py  test_simple.py  tools.py
backend/agent_retirement/: .bedrock_agentcore.yaml  Dockerfile  README.md  agent.py  test_full.py  test_simple.py
backend/agent_retirement/src/: models.py  schemas.py
backend/agent_tagger/: .bedrock_agentcore.yaml  Dockerfile  agent.py  requirements.txt  test_simple.py
backend/agent_tagger/src/: models.py
backend/api/: main.py  package_docker.py
backend/database/: pyproject.toml  reset_db.py  run_migrations.py  seed_data.py  setup.py  test_data_api.py  test_user_lookup.py  verify_database.py
backend/database/migrations/: 001_schema.sql  001_schema_postgres.sql
backend/database/src/: client.py  schemas.py
backend/sqs_orchestrator/: lambda_handler.py
guides/: 1_permissions.md  2_sagemaker.md  3_ingest.md  4_researcher.md  4_researcher_AgentCore.md  (+8 more)
(+26 files in other folders)
